# AutomatedAISystemQuranReelsGeneration

./: .env.example  .gitignore  README.md  alembic.ini  automate.db  docker-compose.yml  download_all_audio.py  download_bg.py  generate_dua.py  generate_hadith.py  generate_reel.py  initVM.sh  init_db.py  latest_dua_topics.json  latest_hadith_generation.json  latest_hadith_topics.json  publish_dua.py  publish_hadith.py  publish_to_instagram.py  pyproject.toml  reciters.txt  requirements.txt  run_pipeline.ps1  run_pipeline.sh  seed_quran.py  test_ayah_api.py  test_bg_manager.py  test_full_pipeline.py  test_ig.py  test_ig_raw.py  test_overlay_readability.py  test_quran_reel.py  timing.json
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/corpus/: __init__.py  hadith_loader.py  quran_loader.py  seed_topics.py
app/models/: __init__.py  dedup.py  media.py  metrics.py  performance.py  post.py  queue.py  topic.py
app/routers/: __init__.py  analytics.py  content.py  health.py  publish.py
app/schemas/: __init__.py  media.py  metrics.py  post.py  topic.py
app/services/: __init__.py  analytics.py  background_manager.py  cloudinary_storage.py  content_generator.py  diversity.py  media_renderer.py  publisher.py  quran_reel_renderer.py  rag_engine.py  telegram_bot.py  verifier.py
app/tasks/: __init__.py  analytics_tasks.py  celery_app.py  pipeline.py
doua_generator/: generate_post.py
fonts/: .gitkeep
hadith_generator/: generate_post.py
templates/: carousel_template.json  quote_card_dark.json  quote_card_light.json
